Add education section.

--- a/assets/css/orbit-6.css
+++ b/assets/css/orbit-6.css
@@ -136,7 +136,17 @@ p {
   margin-bottom: 5px;
 }
 
+.main-wrapper .degree {
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
 .sidebar-wrapper .education-container .item {
+  margin-bottom: 15px;
+}
+
+.main-wrapper .education-section .item {
   margin-bottom: 15px;
 }
 
@@ -152,10 +162,30 @@ p {
   font-size: 14px;
 }
 
+.main-wrapper .education-section .meta {
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 0;
+  font-size: 14px;
+}
+
+.main-wrapper .education-section .education-item {
+  position: relative;
+}
+
 .sidebar-wrapper .education-container .time {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 500;
   margin-bottom: 0px;
+}
+
+.main-wrapper .education-section .timerange {
+  font-weight: 500;
+  margin-bottom: 0px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #97AAC3;
 }
 
 .sidebar-wrapper .languages-container .lang-desc {
